--- a/Dream/Dream/Dream.csproj
+++ b/Dream/Dream/Dream.csproj
@@ -130,10 +130,12 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\CurriculaController.cs" />
+    <Compile Include="Controllers\DatosEmpresasController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\HomeEmpleadoController.cs" />
     <Compile Include="Controllers\HomeEmpresaController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\OfertaEmpleosController.cs" />
     <Compile Include="Controllers\UsuariosController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -246,6 +248,16 @@
     <Content Include="Views\Login\Index.cshtml" />
     <Content Include="Views\HomeEmpleado\Index.cshtml" />
     <Content Include="Views\HomeEmpresa\Index.cshtml" />
+    <Content Include="Views\DatosEmpresas\Create.cshtml" />
+    <Content Include="Views\DatosEmpresas\Delete.cshtml" />
+    <Content Include="Views\DatosEmpresas\Details.cshtml" />
+    <Content Include="Views\DatosEmpresas\Edit.cshtml" />
+    <Content Include="Views\DatosEmpresas\Index.cshtml" />
+    <Content Include="Views\OfertaEmpleos\Create.cshtml" />
+    <Content Include="Views\OfertaEmpleos\Delete.cshtml" />
+    <Content Include="Views\OfertaEmpleos\Details.cshtml" />
+    <Content Include="Views\OfertaEmpleos\Edit.cshtml" />
+    <Content Include="Views\OfertaEmpleos\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
