--- a/Dream/Dream/bin/Dream.dll.config
+++ b/Dream/Dream/bin/Dream.dll.config
@@ -61,7 +61,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-  <add name="BdDreamJobEntities" connectionString="metadata=res://*/Models.Model.csdl|res://*/Models.Model.ssdl|res://*/Models.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOPALEXI\MSSQLSERVER03;initial catalog=BdDreamJob;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <add name="BdDreamJobEntities" connectionString="metadata=res://*/Models.Model.csdl|res://*/Models.Model.ssdl|res://*/Models.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-VPS5AAU;initial catalog=BdDreamJob;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
