--- a/Dream/Dream/Dream.csproj
+++ b/Dream/Dream/Dream.csproj
@@ -260,6 +260,7 @@
     <Content Include="Views\OfertaEmpleos\Details.cshtml" />
     <Content Include="Views\OfertaEmpleos\Edit.cshtml" />
     <Content Include="Views\OfertaEmpleos\Index.cshtml" />
+    <Content Include="Views\Login\EleccionRol.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
