--- a/Dream/Dream/Dream.csproj
+++ b/Dream/Dream/Dream.csproj
@@ -186,7 +186,34 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\DetallesOfer.css" />
     <Content Include="Content\HomeE.css" />
+    <Content Include="Content\img\agricola.png" />
+    <Content Include="Content\img\aula-de-clase-con-ninos-y-maestra.jpg" />
+    <Content Include="Content\img\bombero.jpg" />
+    <Content Include="Content\img\camarero.jpg" />
+    <Content Include="Content\img\chef-una-profesion-revista-edu-co.jpg" />
+    <Content Include="Content\img\clinica.jpg" />
+    <Content Include="Content\img\contador.jpg" />
+    <Content Include="Content\img\dental.jpg" />
+    <Content Include="Content\img\dia-del-programador-festejo-con-escasez-de-profesionales-1013463.jpg" />
+    <Content Include="Content\img\diana.png" />
+    <Content Include="Content\img\edificio.jpg" />
+    <Content Include="Content\img\empresario.png" />
+    <Content Include="Content\img\fondo.jpg" />
+    <Content Include="Content\img\fondo1.jpg" />
+    <Content Include="Content\img\hotelcrow.jpg" />
+    <Content Include="Content\img\inicio %281%29.jpg" />
+    <Content Include="Content\img\inicio.jpg" />
+    <Content Include="Content\img\laboratorista.jpg" />
+    <Content Include="Content\img\lacalaca.png" />
+    <Content Include="Content\img\laconstan.jpg" />
+    <Content Include="Content\img\logo.png" />
+    <Content Include="Content\img\panaderia.jpeg" />
+    <Content Include="Content\img\pexels-pavel-danilyuk-7594121.jpg" />
+    <Content Include="Content\img\pexels-pixabay-356040 %281%29.jpg" />
+    <Content Include="Content\img\profamil.jpg" />
+    <Content Include="Content\img\tecnolo.jpg" />
     <Content Include="Content\Login.css" />
     <Content Include="Content\Ofert.css" />
     <Content Include="favicon.ico" />
