Un monton de cambios
NAZO

--- a/Dream/Dream/Dream.csproj
+++ b/Dream/Dream/Dream.csproj
@@ -303,6 +303,7 @@
     <Content Include="Views\OfertaEmpleos\Details2.cshtml" />
     <Content Include="Views\OfertaEmpleos\TodasLasOfertas.cshtml" />
     <Content Include="Views\Shared\_LayoutEmpreado.cshtml" />
+    <Content Include="Views\Curriculu\Index2.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
