--- a/Dream/Dream/Dream.csproj
+++ b/Dream/Dream/Dream.csproj
@@ -203,6 +203,7 @@
     <Content Include="Content\img\economista.jpg" />
     <Content Include="Content\img\edificio.jpg" />
     <Content Include="Content\img\empresa.jpg" />
+    <Content Include="Content\img\Empresa2.jpg" />
     <Content Include="Content\img\empresario.png" />
     <Content Include="Content\img\fondo-empresa.jpg" />
     <Content Include="Content\img\fondo.jpg" />
