--- a/Dream/Dream/Dream.csproj
+++ b/Dream/Dream/Dream.csproj
@@ -183,6 +183,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\CreateE.css" />
     <Content Include="Content\Curri.css" />
     <Content Include="Content\Curricul.css" />
     <Content Include="Content\DetallesOfer.css" />
