--- a/Dream/Dream/Dream.csproj
+++ b/Dream/Dream/Dream.csproj
@@ -188,6 +188,7 @@
     <Content Include="Content\Curricul.css" />
     <Content Include="Content\DetallesOfer.css" />
     <Content Include="Content\HomeEmpleado.css" />
+    <Content Include="Content\Contacto.css" />
     <Content Include="Content\HomeEmpresa.css" />
     <Content Include="Content\img\agricola.png" />
     <Content Include="Content\img\aula-de-clase-con-ninos-y-maestra.jpg" />
