--- a/Dream/Dream/bin/Dream.dll.config
+++ b/Dream/Dream/bin/Dream.dll.config
@@ -62,7 +62,7 @@
   </system.codedom>
   <connectionStrings>
     <add name="BdDreamJobEntities" connectionString="metadata=res://*/Models.Model.csdl|res://*/Models.Model.ssdl|res://*/Models.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-L6UIOLI\SQLEXPRESS;initial catalog=BdDreamJob;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="BdDreamJobEntities1" connectionString="metadata=res://*/Models.Model.csdl|res://*/Models.Model.ssdl|res://*/Models.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MAYERLI\MAYERLI;initial catalog=BdDreamJob;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="BdDreamJobEntities1" connectionString="metadata=res://*/Models.Model.csdl|res://*/Models.Model.ssdl|res://*/Models.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOPALEXI\MSSQLSERVER03;initial catalog=BdDreamJob;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
