--- a/Dream/Dream/Dream.csproj
+++ b/Dream/Dream/Dream.csproj
@@ -312,7 +312,8 @@
     <Content Include="Views\Aplicaciones\Index.cshtml" />
     <Content Include="Views\Aplicaciones\IndexEmpresa.cshtml" />
     <Content Include="Views\Aplicaciones\DetallesOferta.cshtml" />
-    <Content Include="Views\Shared\Contact.cshtml" />
+    <Content Include="Views\Home\ContactoEmpresa.cshtml" />
+    <Content Include="Views\Home\ContactoEmpleado.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
